# medical-rag-advanced

./: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  api.py  config.yaml  graph.html  graph_export.html  lab1_vectordb.ipynb  lab2_chunking.ipynb  lab3_rag(1).ipynb  lab3_rag.ipynb  main.py  pyproject.toml  requirements.txt
backend/: .example.env  api.py  main.py  ragdoct.db  requirements.txt
backend/src/api/: chat_router.py  documents_router.py  routes.py
backend/src/auth/: database.py  models.py  router.py  schemas.py  security.py
backend/src/chunking/: chunker.py
backend/src/embeddings/: embedder.py
backend/src/graphdb/: neo4j_client.py
backend/src/ingestion/: cleaner.py  graph_extractor.py  loader.py
backend/src/prompts/: prompt_templates.py
backend/src/query/: expansion.py  query_rewriter.py
backend/src/retrieval/: graph_retriever.py  merged_retriever.py  retriever.py
backend/src/vectordb/: vector_store.py  weaviate_client.py
frontend/: middleware.ts  next.config.js
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: auth.ts
src/api/: routes.py
src/chunking/: __init__.py  chunker.py
src/graphdb/: models.py  neo4j_client.py
src/ingestion/: graph_extractor.py  loader.py
src/llm/: llm_client.py
src/prompts/: prompt_templates.py
src/query/: query_normalizer.py  query_rewriter.py
src/retrieval/: graph_retriever.py  merged_retriever.py  post_processing.py  retriever.py
src/utils/: security.py
src/vectordb/: vector_store.py  weaviate_client.py
(+13 files in other folders)
