[project]
name = "medical-rag-advanced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=1.4.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "nltk>=3.9.4",
    "notebook>=7.5.7",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "weaviate-client>=4.21.3",
]
